--- a/index.html
+++ b/index.html
@@ -120,13 +120,12 @@
             </div>
         </div>
     </section>
-    <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-    <section class="cover">
+    <a class="cover" href="https://stampsy.com/na-elektrichkakh-do-baikala">
             <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе —&nbsp;путешествие от столицы до Байкала на&nbsp;электричках.</p>
             <div class="cover__background"></div>
-    </section>
     </a>
+    
 </main>
     <footer class="footer">
         <div class="footer__columns">
