--- a/index.html
+++ b/index.html
@@ -120,12 +120,13 @@
             </div>
         </div>
     </section>
-    <a class="cover" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+    <section class="cover">
+    <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
             <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе —&nbsp;путешествие от столицы до Байкала на&nbsp;электричках.</p>
             <div class="cover__background"></div>
     </a>
-    
+    </section>
 </main>
     <footer class="footer">
         <div class="footer__columns">
@@ -136,9 +137,7 @@
                 <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
                 <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
             </nav>
-            <span class="footer__copyright">
-                © 2022. Павел Алексеев
-            </span>
+            <p class="footer__copyright">© 2022. Павел Алексеев</p>
         </div>
     </footer>
 </body>
